[fix]github actions + badges

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,16 +3,22 @@ name: Test CI
 on:
   push:
     branches: [ main ]
+env:
+  FACEBOOK_CLIENT_ID: ${{ serects.FACEBOOK_CLIENT_ID }}
+  FACEBOOK_CLIENT_SECRET: ${{ serects.FACEBOOK_CLIENT_SECRET }}
+  FACEBOOK_LONG_LIVE_TOKEN: ${{ serects.FACEBOOK_LONG_LIVE_TOKEN }}
+  FACEBOOK_TEST_EMAIL: ${{ serects.FACEBOOK_TEST_EMAIL }}
+  GOOGLE_CLIENT_ID: ${{ serects.GOOGLE_CLIENT_ID }}
+  GOOGLE_CLIENT_SECRET: ${{ serects.GOOGLE_CLIENT_SECRET }}
+  GOOGLE_REFRESH_TOKEN: ${{ serects.GOOGLE_REFRESH_TOKEN }}
+  GOOGLE_TEST_EMAIL: ${{ serects.GOOGLE_TEST_EMAIL }}
 
 jobs:
   test:
-
     runs-on: ubuntu-latest
-
     strategy:
       matrix:
         node-version: [18.x]
-
     steps:
       - uses: actions/checkout@v3
       - name: Use Node.js ${{ matrix.node-version }}
