--- a/.github/workflows/publish-page.yml
+++ b/.github/workflows/publish-page.yml
@@ -2,6 +2,16 @@ name: publish github pages
 on:
   push:
     branches: [main]
+env:
+  FACEBOOK_CLIENT_ID: ${{ serects.FACEBOOK_CLIENT_ID }}
+  FACEBOOK_CLIENT_SECRET: ${{ serects.FACEBOOK_CLIENT_SECRET }}
+  FACEBOOK_LONG_LIVE_TOKEN: ${{ serects.FACEBOOK_LONG_LIVE_TOKEN }}
+  FACEBOOK_TEST_EMAIL: ${{ serects.FACEBOOK_TEST_EMAIL }}
+  GOOGLE_CLIENT_ID: ${{ serects.GOOGLE_CLIENT_ID }}
+  GOOGLE_CLIENT_SECRET: ${{ serects.GOOGLE_CLIENT_SECRET }}
+  GOOGLE_REFRESH_TOKEN: ${{ serects.GOOGLE_REFRESH_TOKEN }}
+  GOOGLE_TEST_EMAIL: ${{ serects.GOOGLE_TEST_EMAIL }}
+  
 jobs:
   commit:
     runs-on: ubuntu-latest
