--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "test": "vitest run",
     "test:watch": "vitest --coverage",
     "test:debug": "vitest run --test-timeout 300000",
-    "test:coverage": "vitest run --coverage",
+    "test:coverage": "vitest run --coverage && make-coverage-badge",
     "build": "rm -rf ./dist && tsc"
   },
   "devDependencies": {
@@ -42,6 +42,7 @@
     "eslint": "^8.36.0",
     "express": "^4.18.2",
     "express-handlebars": "^7.0.4",
+    "make-coverage-badge": "^1.2.0",
     "sql.js": "^1.8.0",
     "typescript": "^4.9.5",
     "vitest": "^0.29.7"
