[fix] github actions

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,7 +8,7 @@ env:
   FACEBOOK_LONG_LIVE_TOKEN: ${{ secrets.FACEBOOK_LONG_LIVE_TOKEN }}
   FACEBOOK_TEST_EMAIL: ${{ secrets.FACEBOOK_TEST_EMAIL }}
   GOOGLE_CLIENT_ID: ${{ secrets.GOOGLE_CLIENT_ID }}
-  GOOGLE_CLIENT_SECRET: ${{ serects.GOOGLE_CLIENT_SECRET }}
+  GOOGLE_CLIENT_SECRET: ${{ secrets.GOOGLE_CLIENT_SECRET }}
   GOOGLE_REFRESH_TOKEN: ${{ secrets.GOOGLE_REFRESH_TOKEN }}
   GOOGLE_TEST_EMAIL: ${{ secrets.GOOGLE_TEST_EMAIL }}
 jobs:
