--- a/.github/workflows/publish-page.yml
+++ b/.github/workflows/publish-page.yml
@@ -18,7 +18,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
-          ref: master
+          ref: main
       - uses: actions/setup-node@v3
         with:
           node-version: 18
