--- a/.github/workflows/publish-page.yml
+++ b/.github/workflows/publish-page.yml
@@ -30,7 +30,7 @@ jobs:
           git config --global user.name 'denz93'
           git config --global user.email 'bdnhan182@gmail.com'
           git fetch
-          git checkout gb_pages
+          git checkout gh_pages
           mkdir -p ./docs
           cp -R ./coverage/* ./docs
           git add docs/*
