--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@denz93/vendure-plugin-3rd-party-auth",
   "version": "0.0.2",
   "description": "A set of auth strategies to work with 3rd party such as Google, Facebook, etc",
-  "main": "index.js",
+  "main": "dist/index.js",
   "author": "Nhan Bach <inbox@nhanbach.dev>",
   "license": "MIT",
   "private": false,
