--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,8 @@
         "target": "ES2020",
         "sourceMap": false,
         "skipLibCheck": true,
-        "strictPropertyInitialization": false
+        "strictPropertyInitialization": false,
+        "declaration": true
     },
     "exclude": ["./src/**/*.test.ts", "./src/**/*.spec.ts", "vite.config.ts", "test/**/*.ts"]
 }
